# ideahub_mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: claude-code-config.md  mcp-health.md  registry-submissions.md
docs/plans/: 2026-04-18-writeback-spec-phase-1.md
evals/: README.md  seed_corpus.py
src/ideahub_mcp/: __init__.py  __main__.py  errors.py  server.py
src/ideahub_mcp/domain/: actors.py
src/ideahub_mcp/observability/: logging.py
src/ideahub_mcp/storage/: backfill.py  backup.py  connection.py  migrations.py
src/ideahub_mcp/storage/migrations/: 001_init.sql  002_kind_and_task_ref.sql  003_checkpoint_kind_label.sql  004_content_hash.sql
src/ideahub_mcp/tools/: annotate.py  archive.py  candidates.py  capture.py  checkpoint.py  dump.py  get.py  link.py  list_ideas.py  related.py  search.py
src/ideahub_mcp/util/: clock.py  hashing.py  types.py
tests/: conftest.py  test_actors.py  test_annotate.py  test_backup.py  test_candidates.py  test_capture.py  test_checkpoint.py  test_coerce.py  test_dump.py  test_errors.py  test_get.py  test_link.py  test_lint.py  test_list.py  test_logging.py  test_migrations.py  test_property.py  test_protocol_smoke.py  test_related.py  test_search.py  test_server_smoke.py  test_types.py
