[project]
name = "ideahub-mcp"
version = "0.1.0"
description = "Agent-first MCP server for capturing and recalling ideas."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2.7",
  "python-ulid>=3.0",
  "structlog>=24.0",
]

[project.scripts]
ideahub-mcp = "ideahub_mcp.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.0",
  "ruff>=0.6",
  "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ideahub_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "hypothesis>=6.152.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
